# ai-asset-maker

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ai_asset_maker/: __init__.py  cli.py  generate.py  prompting.py
