[project]
name = "ai-asset-maker"
version = "0.1.0"
description = "Template-driven Stable Diffusion asset generator"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "diffusers>=0.27.0",
  "transformers>=4.38.0",
  "accelerate>=0.26.0",
  "torch",
  "safetensors>=0.4.2",
]

[project.scripts]
ai-asset-maker = "ai_asset_maker.cli:main"

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
